<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.teambo.kolberempahriah.ui.home.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.teambo.kolberempahriah.ui.home.calculator.CalculatorFragment"
        android:label="@string/nav_calc"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.teambo.kolberempahriah.ui.home.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.teambo.kolberempahriah.ui.home.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.teambo.kolberempahriah.ui.home.setting.SettingFragment"
        android:label="@string/nav_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>